# freethreading

./: .codecov.yml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  caveats.rst  conf.py  considerations.rst  index.rst  requirements.txt  usage.rst
src/freethreading/: __init__.py
tests/: test_freethreading.py
