[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "freethreading"
version = "0.1.0"
description = "Thread-first true parallelism"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Iskander Gaba", email = "iskander@hey.com" },
]
keywords = [
    "gil",
    "threading",
    "multiprocessing",
    "concurrency",
    "parallelism",
]
requires-python = ">=3.10"

[project.urls]
repository = "https://github.com/iskandergaba/freethreading"
documentation = "https://freethreading.readthedocs.io"

[dependency-groups]
dev = [
    "ruff~=0.14.0",
    "pytest~=9.0.0",
    "pytest-cov~=7.0.0",
]
docs = [
    "sphinx-autoapi~=3.6.0",
    "sphinx-autobuild~=2025.08.0",
    "python-docs-theme~=2025.10"
]

[tool.uv.dependency-groups]
docs = { requires-python = ">=3.12" }

[tool.ruff.lint]
extend-select = ["E501"]
